// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<TopNav /> > snapshot stays stable across theme runs > topnav-dark 1`] = `
<nav
  aria-label="Primary"
  class="mx-auto flex max-w-6xl items-center justify-between px-6 py-5 lg:px-10"
>
  <a
    aria-label="The Better Decision, home"
    class="rounded-sm hover:opacity-80 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-accent/40"
    href="/"
  >
    <span
      class="sm:hidden"
    >
      <svg
        aria-labelledby="_r_8_"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="_r_8_"
        >
          The Better Decision
        </title>
        <path
          d="M 9 8 L 18 16 L 9 24"
          fill="none"
          opacity="0.55"
          stroke="var(--color-text-muted)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
        />
        <path
          d="M 14 8 L 23 16 L 14 24"
          fill="none"
          opacity="1"
          stroke="var(--color-accent)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
        />
      </svg>
    </span>
    <span
      class="hidden sm:inline-flex"
    >
      <span
        class="inline-flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 32 32"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M 9 8 L 18 16 L 9 24"
            fill="none"
            opacity="0.55"
            stroke="var(--color-text-muted)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.5"
          />
          <path
            d="M 14 8 L 23 16 L 14 24"
            fill="none"
            opacity="1"
            stroke="var(--color-accent)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.5"
          />
        </svg>
        <span
          aria-label="The Better Decision"
          class="font-display font-semibold tracking-tight text-text-primary"
        >
          The Better Decision
        </span>
      </span>
    </span>
  </a>
  <div
    class="flex items-center gap-2 sm:gap-4"
  >
    <a
      class="whitespace-nowrap px-2 text-sm text-text-muted transition-colors hover:text-text-primary"
      href="/login"
    >
      Sign in
    </a>
    <a
      class="rounded-md bg-accent px-4 py-2 text-sm font-medium text-accent-text hover:bg-accent-hover disabled:opacity-50 whitespace-nowrap"
      href="/register"
    >
      Get started
    </a>
    <button
      aria-label="Switch to light mode"
      class="inline-flex min-h-[44px] min-w-[44px] items-center justify-center rounded-md text-text-muted hover:bg-surface-overlay hover:text-text-secondary md:min-h-0 md:min-w-0 md:p-1.5 "
    >
      <svg
        class="h-4 w-4"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</nav>
`;

exports[`<TopNav /> > snapshot stays stable across theme runs > topnav-light 1`] = `
<nav
  aria-label="Primary"
  class="mx-auto flex max-w-6xl items-center justify-between px-6 py-5 lg:px-10"
>
  <a
    aria-label="The Better Decision, home"
    class="rounded-sm hover:opacity-80 focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-accent/40"
    href="/"
  >
    <span
      class="sm:hidden"
    >
      <svg
        aria-labelledby="_r_a_"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 32 32"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="_r_a_"
        >
          The Better Decision
        </title>
        <path
          d="M 9 8 L 18 16 L 9 24"
          fill="none"
          opacity="0.55"
          stroke="var(--color-text-muted)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
        />
        <path
          d="M 14 8 L 23 16 L 14 24"
          fill="none"
          opacity="1"
          stroke="var(--color-accent)"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2.5"
        />
      </svg>
    </span>
    <span
      class="hidden sm:inline-flex"
    >
      <span
        class="inline-flex items-center gap-2"
      >
        <svg
          aria-hidden="true"
          focusable="false"
          height="24"
          viewBox="0 0 32 32"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M 9 8 L 18 16 L 9 24"
            fill="none"
            opacity="0.55"
            stroke="var(--color-text-muted)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.5"
          />
          <path
            d="M 14 8 L 23 16 L 14 24"
            fill="none"
            opacity="1"
            stroke="var(--color-accent)"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2.5"
          />
        </svg>
        <span
          aria-label="The Better Decision"
          class="font-display font-semibold tracking-tight text-text-primary"
        >
          The Better Decision
        </span>
      </span>
    </span>
  </a>
  <div
    class="flex items-center gap-2 sm:gap-4"
  >
    <a
      class="whitespace-nowrap px-2 text-sm text-text-muted transition-colors hover:text-text-primary"
      href="/login"
    >
      Sign in
    </a>
    <a
      class="rounded-md bg-accent px-4 py-2 text-sm font-medium text-accent-text hover:bg-accent-hover disabled:opacity-50 whitespace-nowrap"
      href="/register"
    >
      Get started
    </a>
    <button
      aria-label="Switch to light mode"
      class="inline-flex min-h-[44px] min-w-[44px] items-center justify-center rounded-md text-text-muted hover:bg-surface-overlay hover:text-text-secondary md:min-h-0 md:min-w-0 md:p-1.5 "
    >
      <svg
        class="h-4 w-4"
        fill="none"
        stroke="currentColor"
        stroke-width="1.5"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 3v2.25m6.364.386-1.591 1.591M21 12h-2.25m-.386 6.364-1.591-1.591M12 18.75V21m-4.773-4.227-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 1 1-7.5 0 3.75 3.75 0 0 1 7.5 0Z"
          stroke-linecap="round"
          stroke-linejoin="round"
        />
      </svg>
    </button>
  </div>
</nav>
`;
